# cloudedge-template

./: .checkov.yaml  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .terraformignore  .tflint.hcl  .tflintignore  .yamllint.yaml  AGENTS.md  LICENSE.md  README.md  VALIDATION_REPORT.md  backend.tf  devtest.tfvars  fix-precommit-issues.sh  main.tf  outputs.tf  pre-commit-config.yaml  pyproject.toml  tasks.md  variables.tf
.github/: CI_QUICK_REFERENCE.md
.github/scripts/: generate_threat_report.py  generate_threat_summary.py
.github/workflows/: ci.yml
.opencode/command/: speckit.clarify.md  speckit.specify.md  speckit.taskstoissues.md
deploy/opentofu/gcp/: .terraform.lock.hcl  backend.tf  main.tf  (+2 more)
docs/: ARCHITECTURE.md  CI_WORKFLOW.md  CONFIGURATION.md  GCP.md  MODULES.md  PRE_COMMIT_SETUP.md  QUICKSTART.md  SECURITY.md  TESTING.md
features/: connectivity_patterns.feature  core_infrastructure.feature  demo_backend.feature  demo_web_app.feature  directory_migration.feature  project_singleton.feature
scripts/: deploy.sh  generate-threat-model.sh  nist_compliance_check.sh  setup-backend.sh  teardown.sh  verify-deployment-fixes.sh
tests/: go.mod  go.sum
tests/contract/: checkov_test.go  core_infrastructure_contract_test.go  demo_web_app_contract_test.go  state_migration_test.go
tests/integration/: directory_migration_test.go
threat_modelling/: RISK_TRACKING_GUIDE.md  test-github.yaml  threat-model.example.yaml  threat-model.example.yaml.bak  threat-model.yaml
(+116 files in other folders)
